@@ -24,7 +24,7 @@ typedef struct {
 	interfaceinfo interface;
 	int cbackground, cedge, cheader, cheadertitle, cheaderdate, ctext, cline, clinel, cvnstat;
 	int crx, crxd, ctx, ctxd, cbgoffset, cbgoffsetmore, showheader, showedge, showlegend, altdate;
-	int lineheight, large;
+	int lineheight, large, invert;
 	char headertext[65], databegin[18], dataend[18];
 	time_t current;
 } IMAGECONTENT;
