@@ -17,6 +17,7 @@ void drawarrowup(IMAGECONTENT *ic, const int x, const int y);
 void drawarrowright(IMAGECONTENT *ic, const int x, const int y);
 void hextorgb(const char *input, int *rgb);
 void modcolor(int *rgb, const int offset, const int force);
+void invertcolor(int *rgb);
 char *getimagevalue(const uint64_t b, const int len, const int rate);
 char *getimagescale(const uint64_t b, const int rate);
 uint64_t getscale(const uint64_t input, const int rate);
